test/syc/bad/shortvoid.c
/*
 * Both short and void specifier
 */

short void a;
